Add hole revalidation.
Sometimes holes need to be updated due to exploits being found, etc.
This allows for easily revalidating all submissions (passed and failed)
and updating them to their new status.

--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -15,6 +15,14 @@
         <dd>{{ hole.trim|e }}</dd>
         <dt>Sample:</dt>
         <dd><pre>{{ hole.sample|e }}</pre></dd>
+        {% if user.isAdmin %}
+          <dt>Revalidate:</dt>
+          <dd>
+            <form method="post" action="/holes/{{ hole._id|e('url') }}/submissions/revalidate">
+              <button type="submit" class="btn">Submit</button>
+            </form>
+          </dd>
+        {% endif %}
       </dl>
       {% if user and (user.isAdmin or hole.isOpen) %}
         <form enctype="multipart/form-data" method="post" action="/holes/{{ hole._id|e('url') }}/submissions">
